Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages.

Changelog for smp_utils-0.98 [20121221] [svn:r125]
  - smp_discover, smp_discover_list: in 1 line summary use
    "U" instead of "T" (routing attribute) if "table to
    table supported" set in report general response
    - output device slot (group) number if len > 109
  - smp_discover: '-mm' produces full output for each phy
  - smp_rep_broadcast: add broadcast type names
  - change binary install from /usr/sbin to /usr/bin since
    sbin caused problems
  - examples folder script cleanup

Changelog for smp_utils-0.97 [20120120] [svn:r116]
  - smp_conf_phy_event: new utility
  - change to ./configure style build and use smputils
    runtime and development libraries
  - change binary install from /usr/bin to /usr/sbin
    in debian and rpm (.spec) scripts
  - sync to SPL-2 (spl2r03)
  - take resid into account when calculating the actual
    response length
  - smp_rep_phy_event, smp_rep_phy_event_list: add --enumerate
    option to list Phy Event Source names
  - smp_read_gpio, smp_write_gpio: move register type,
    index and count fields in enhanced variants
  - add solaris and freebsd ports

Changelog for smp_utils-0.96 [20110620] [svn:r96]
  - smp_conf_zone_perm_tbl, smp_conf_zone_man_pass
    smp_conf_zone_phy_info, smp_ena_dis_zoning,
    smp_rep_broadcast, smp_rep_phy_event, smp_rep_phy_event_list,
    smp_rep_self_conf_stat, smp_rep_zone_man_pass,
    smp_rep_zone_perm_tbl, smp_zone_activate, smp_zoned_broadcast,
    smp_zone_lock, smp_zone_unlock:
      add these new utilities
  - all utilities: sync to SPL-2 (spl2r01)
    -those with '--phy=ID' option: increase max from 128 to 254
  - smp_discover, smp_discover_list: add --adn and --summary
    - make --summary default if --phy=ID option not given
    - with --summary show disabled and errored phys